--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
   "minimum-stability": "dev-main"
   
    "autoload": {
-        "files": ["src/ban.php"]
+        "files": ["src/vpsHandler.php"]
     }
 }
