--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,19 @@
 {
   "name": "gian0012/vpshandler",
   "description": "Use this unofficial NovaGram code source to handle your VPS.",
-  "type": "library",
   "require": {
-    "php": ">=7.4"
-        "skrtdev/novagram": ">=1.9"
+    "php": ">=7.4",
+    "skrtdev/novagram": ">=1.9"
   },
   "license": "MIT",
   "authors": [
     {
-      "name": "gian",
+      "name": "gian"
     }
   ],
   "minimum-stability": "dev-main",
-  
-   "autoload": {
-        "files": ["src/vpsHandler.php"]
-    }
+
+  "autoload": {
+    "files": ["src/vpsHandler.php"]
+  }
 }
