--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "gian0012/vps-handler",
   "type": "library",
   "description": "Use this unofficial NovaGram code source to handle your VPS.",
-  "homepage": "https://github.com/Seldaek/monolog",
+  "homepage": "https://github.com/gian0012/VPS-Handler",
   "license": "MIT",
   "authors": [
     {
@@ -13,6 +13,12 @@
   "require": {
     "php": ">=7.4"
   },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/gian0012/VPS-Handler.git"
+    }
+  ],
   "autoload": {
     "psr-0": {
       "Monolog": "src/vpsHandler.php"
