Removed Novagram require

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "gian0012/vps-handler",
   "type": "library",
-  "description": "An easy VPS Handler class.\n\n",
+  "description": "An easy VPS Handler class.",
   "homepage": "https://github.com/gian0012/VPS-Handler",
   "license": "MIT",
   "authors": [
